Added more content to lasagna
added images, description, ingridients and steps through lists and para tags. This is for better understanding of readers.

--- a/Project_1/recipes/lasagna.html
+++ b/Project_1/recipes/lasagna.html
@@ -7,5 +7,33 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../../images/Lasagna.png" alt="Lasagna" height="250">
+    <h3>Description</h3>
+    <p>Lasagna, also known as lasagne (Italian) is a type of pasta, possibly one of the oldest types,made in very wide, flat sheets. The same-named Italian dish is made of stacked layers of lasagna alternating with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, vegetables, cheeses (which may include ricotta, mozzarella and Parmesan), and seasonings and spices.</p>
+    <p>The dish may be topped with grated cheese, which becomes melted during baking. Typically cooked pasta is assembled with the other ingredients and then baked in an oven (al forno). The resulting baked pasta is cut into single-serving square or rectangular portions.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 1/2 lb. ground beef</li>
+        <li>1 lb. hot breakfast sausage</li>
+        <li>2 cloves garlic, minced</li>
+        <li>2 (14.5-oz.) cans whole tomatoes</li>    
+        <li>2 (6-oz.) cans tomato paste</li>    
+        <li>4 Tbsp. dried parsley, divided</li>    
+        <li>2 Tbsp. dried basil</li>    
+        <li>2 1/2 tsp. salt</li>    
+        <li>3 c. low-fat cottage cheese</li>    
+        <li>2 eggs, beaten</li>    
+        <li>1/2 c. grated (not shredded) parmesan cheese</li>    
+        <li>1 Tbsp. olive oil</li>    
+        <li>1 (1o-oz.) package lasagna noodles</li>
+        <li>1 lb. sliced mozzarella cheese</li>
+    </ul>
+    <h3>Steps to follow:</h3>
+    <ol>
+        <li><strong>Boil pasta:</strong> In a large pot of salted water boil lasagna noodles per the recipe below.</li>
+        <li><strong>Prepare meat sauce:</strong> Cook sausage and beef with onion and garlic. Drain well, add the pasta sauce (I love <a href="https://www.amazon.com/stores/page/EFF01E63-011F-45F0-82AA-DC1D18A11FA4?ingress=2&visitId=ffd194ea-229e-4352-8f16-ddad2622f366&store_ref=bl_ast_dp_brandLogo_sto&linkCode=sl2&tag=spewitpen-20&linkId=83a0f4230ab2170b14ebf4a7bfd150e1&language=en_US&ref_=as_li_ss_tl&ascsubtag=srctok-55a27cb9a8417db0&btn_ref=srctok-55a27cb9a8417db0" target="_blank" rel="noopener noreferencerrer">this brand</a>) & simmer it for a few minutes to thicken.</li>    
+        <li><strong>Combine cheese mixture:</strong> Stir the cheese mixture together in a bowl.</li>    
+        <li><strong>Layer & bake:</strong> Layer the meat sauce and cheese mixture with lasagna noodles and bake until the top of the lasagna is golden brown.</li>
+    </ol>
 </body>
 </html>
